@@ -13,6 +13,7 @@ import org.springframework.security.web.header.writers.ClearSiteDataHeaderWriter
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 import lombok.RequiredArgsConstructor;
@@ -21,6 +22,8 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 public class SecurityConfig {
 
+
+
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         HeaderWriterLogoutHandler clearSiteData = new HeaderWriterLogoutHandler(new ClearSiteDataHeaderWriter(ClearSiteDataHeaderWriter.Directive.COOKIES));
@@ -28,16 +31,18 @@ public class SecurityConfig {
                 .cors(c -> {
                             CorsConfigurationSource source = request -> {
                                 var cors = new CorsConfiguration();
-                                cors.addAllowedOriginPattern("*");
-                                cors.setAllowedMethods(List.of("*"));
-                                cors.setAllowedHeaders(List.of("*"));
+                                // 실제 프론트엔드 도메인을 여기에 추가
+                                cors.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+                                cors.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+                                cors.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
                                 cors.setAllowCredentials(true);
                                 cors.setMaxAge(3600L);
                                 return cors;
                             };
                             c.configurationSource(source);
                         }
-                ).csrf(csrf -> csrf.disable()) // CSRF 비활성화
+                )
+                .csrf(csrf -> csrf.disable()) // CSRF 비활성화
                 .authorizeHttpRequests(authorize -> authorize
                         .anyRequest().permitAll() // 모든 요청 허용
                 );
